--- a/html/options.html
+++ b/html/options.html
@@ -34,6 +34,20 @@
 
       <div id="login">
         <label class="label">
+          <span id="i18n_authentication"></span>
+        </label>
+        <div class="radio-inputs">
+          <label class="radio">
+            <input type="radio" id="ldap_auth" name="auth_mount" value="ldap" checked>
+            <span class="name" id="i18n_ldap_auth"></span>
+          </label>
+          <label class="radio">
+            <input type="radio" id="userpass_auth" name="auth_mount" value="userpass">
+            <span class="name" id="i18n_userpass_auth"></span>
+          </label>
+        </div>
+
+        <label class="label">
           <span id="i18n_vault_url"></span>
           <input type="text" class="input" name="server" id="serverBox" />
         </label>
@@ -47,6 +61,7 @@
           <span id="i18n_ldap_password"></span>
           <input type="password" class="input" name="pass" id="passBox" />
         </label>
+        <h4 class="version"></h4>
 
         <button
           class="button button--primary"
@@ -61,7 +76,7 @@
           </label>
         </div>
         <div id="backendsList"></div>
-        <h4 id="version"></h4>
+        <h4 class="version"></h4>
         <button class="button" id="logoutButton" ><span id="i18n_logout"></span></button>
       </div>
     </main>
