--- a/html/navigate.html
+++ b/html/navigate.html
@@ -32,6 +32,13 @@
       </form>
     </div>
 
+    <div id="dialog-form-select-keys" title="Sélectionner une clé">
+      <form>
+        <fieldset id="select-keys-fieldset">
+        </fieldset>
+      </form>
+    </div>
+
     <div id="dialog-form-edit" title="Modifier un secret">
       <form>
         <fieldset>
